--- a/res/layout/report.xml
+++ b/res/layout/report.xml
@@ -23,6 +23,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="阿猫阿狗" />
@@ -41,6 +42,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
+            android:id="@+id/address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="常州新百" 
@@ -60,6 +62,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
+            android:id="@+id/comments"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:ems="10"
