--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -53,19 +53,19 @@
         android:id="@+id/id1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="登录成功测试" />
+        android:text="账号1" />
 
     <Button
         android:id="@+id/id2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="登录失败测试" />
+        android:text="账号2" />
 
     <Button
         android:id="@+id/id3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="捣乱模式" />
+        android:text="账号3" />
 
         <TextView
         android:layout_width="wrap_content"
