--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -112,6 +112,29 @@
             android:id="@+id/to_chinanet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="进入" 
+            android:visibility="invisible"/>
+
+    </TableRow>
+    
+    
+    
+        <TableRow
+        android:id="@+id/tableRow2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="其他"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <Button
+            android:id="@+id/to_else"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="进入" />
 
     </TableRow>
