--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,16 +3,16 @@
     android:id="@+id/widget32"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/white" >
 
-    <TextView
+    <Button
         android:id="@+id/report_total"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="@color/red"
         android:gravity="center"
-        android:text="您目前还没有报告生成\n保存报告后会显示报告数量"
+        android:text="当前报告数：0\n点我上传"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold" />
@@ -34,7 +34,7 @@
             android:id="@+id/widget45"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="WIFI"
+            android:text="SSID名称"
             android:textColor="@color/black" />
 
         <TextView
@@ -75,6 +75,24 @@
         android:textColor="@color/black"
         android:text="如果WIFI为“无”，说明你未连接无线网络。\n请点击下方的“设置”按钮，\n进入选择合适的wlan进行连接 "/>
 
+    <TableRow
+        android:id="@+id/tableRow2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <Button
+            android:id="@+id/wlan_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="设置" />
+
+    </TableRow>
     <TableRow
         android:id="@+id/tableRow1"
         android:layout_width="match_parent"
@@ -138,24 +156,7 @@
             android:text="进入" />
 
     </TableRow>
-        <TableRow
-        android:id="@+id/tableRow2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <Button
-            android:id="@+id/wlan_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="设置" />
-
-    </TableRow>
+        
 
         <Button
             android:layout_gravity="bottom"
