--- a/res/layout/browser.xml
+++ b/res/layout/browser.xml
@@ -1,18 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white" >
 
+    
+        <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="60"
+        android:background="@drawable/a">
+        
+        <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="60">
+        
+
+        <ImageView
+            android:id="@+id/browser_step"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/fourthstep" />
+
+        </TableRow>
+        
+        
+        
+        <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="120"
+        >
+        
+        </TableRow>
+    
+    
+    </TableRow>
+    
     <TextView
         android:id="@+id/textView1"
-        android:layout_alignParentTop="true"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="80"
         android:text="本页面旨在测试浏览器的登陆可行性,请将账号密码填入,完成“上线——下线”操作后点击“测试完成”"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-    
     
                 <TableRow
         android:id="@+id/tableRow1"
@@ -43,43 +79,22 @@
     </TableRow>
     
                 
+                <WebView
+                                    android:id="@+id/webView1"
+                                    android:layout_width="fill_parent"
+        							android:layout_height="0dp"
+        							android:layout_weight="400"
+                                     />
                 
-                
-                                <TableRow
-        android:id="@+id/tableRow1"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="70dp"
-            android:layout_height="match_parent"
-            android:text="密码"
-            android:gravity="center"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        <EditText
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:hint="123456789" />
-
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="复制到粘贴板" 
-            android:textSize="10sp"/>
-
-    </TableRow>
 
 
 
                                 <LinearLayout
                                     android:id="@+id/button_group"
-                                    android:layout_alignParentBottom="true"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="0dp"
+                                    android:layout_weight="60"
                                     android:orientation="vertical" >
 
                                     <Button
@@ -90,12 +105,5 @@
 
                                 </LinearLayout>
                                 
-                                <WebView
-                                    android:id="@+id/webView1"
-                                    android:layout_width="fill_parent"
-        							android:layout_height="fill_parent"
-        							android:layout_below="@id/textView1" 
-                                    android:layout_above="@id/button_group" 
-                                     />
-
-</RelativeLayout>
+                                
+</LinearLayout>
