--- a/res/layout/login_process.xml
+++ b/res/layout/login_process.xml
@@ -4,11 +4,49 @@
     android:layout_height="match_parent"
     android:orientation="vertical" 
     android:background="@color/white">
+    
+    
+    
+        <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="80"
+        android:background="@drawable/a">
+        
+        <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="60">
+        
+
+        <ImageView
+            android:id="@+id/login_process_step"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/fourthstep" />
+
+        </TableRow>
+        
+        
+        
+        <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="120"
+        >
+        
+        </TableRow>
+    
+    
+    </TableRow>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6"
+        android:layout_weight="600"
         android:orientation="vertical" >
 
         <TextView
@@ -57,7 +95,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="200"
         android:orientation="vertical" >
 
         <TableRow
