--- a/res/layout/report.xml
+++ b/res/layout/report.xml
@@ -5,11 +5,47 @@
     android:orientation="vertical"
     android:background="@color/white" >
 
+    <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="100"
+        android:background="@drawable/a">
+        
+        <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="60">
+        
+
+        <ImageView
+            android:id="@+id/report_step"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/fourthstep" />
+
+        </TableRow>
+        
+        
+        
+        <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="120"
+        >
+        
+        </TableRow>
+    
+    
+    </TableRow>
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="8" >
+        android:layout_weight="500" >
         
             <TableRow
         android:id="@+id/tableRow1"
@@ -80,7 +116,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="2"  >
+        android:layout_weight="60"  >
 
         <Button
             android:id="@+id/save"
