--- a/res/layout/browser.xml
+++ b/res/layout/browser.xml
@@ -20,9 +20,20 @@
         android:layout_weight="60">
         
 
+                <ImageView
+            android:layout_weight="1"
+            android:id="@+id/back"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back_selector" />    
+            
+            
+        
+
         <ImageView
+            android:layout_weight="3"
             android:id="@+id/browser_step"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:src="@drawable/fourthstep" />
 
