--- a/res/layout/login1.xml
+++ b/res/layout/login1.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/white" >
     
     
     <TableRow
@@ -157,7 +158,7 @@
          android:layout_weight="1"                  
              android:id="@+id/login"           
                         
-        android:background="@drawable/login1"/> 
+        android:background="@drawable/login_selector"/> 
 
     
     
@@ -184,6 +185,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
+            android:textColor="@color/black"
             android:text="当前服务器为你预置的账号密码如下:          
 (点击即可自动填入)" />
 
@@ -203,7 +205,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="80" 
-        android:background="@drawable/show_id">
+        android:background="@drawable/show_id_selector">
         
                     <TableRow
         
@@ -280,7 +282,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="80" 
-        android:background="@drawable/show_id">
+        android:background="@drawable/show_id_selector">
         
                     <TableRow
         android:layout_width="0dp"
@@ -356,7 +358,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="80" 
-        android:background="@drawable/show_id">
+        android:background="@drawable/show_id_selector">
         
                     <TableRow
         android:id="@+id/tableRow1"
@@ -432,10 +434,11 @@
         android:layout_weight="80"
         >
              <ImageView 
+                 android:id="@+id/refresh"
                  android:layout_weight="1"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
-                 android:background="@drawable/refresh1"/>
+                 android:background="@drawable/refresh_selector"/>
             
             
             
