--- a/res/layout/login_process.xml
+++ b/res/layout/login_process.xml
@@ -20,10 +20,21 @@
         android:layout_height="match_parent"
         android:layout_weight="60">
         
+            
+                <ImageView
+            android:layout_weight="1"
+            android:id="@+id/back"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back_selector" />    
+            
+            
+        
 
         <ImageView
+            android:layout_weight="3"
             android:id="@+id/login_process_step"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:src="@drawable/fourthstep" />
 
@@ -55,6 +66,7 @@
             android:layout_height="wrap_content"
             android:text="正在登录。。。
                                                                      登录成功"
+            android:textColor="@color/black"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
@@ -62,7 +74,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="200"
         android:orientation="vertical" >
 
         <TableRow
@@ -78,13 +90,14 @@
                 android:layout_weight="1"
                 android:visibility="invisible" />"
 
-            <Button
+
+            <ImageView 
                 android:id="@+id/browser"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:text="浏览器登陆" 
                 android:layout_weight="1"
-                android:visibility="invisible"/>
+                android:visibility="invisible"
+                android:background="@drawable/browser_selector"/>
 
         </TableRow>
         
@@ -103,21 +116,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
-            <Button
+            <ImageView
                 android:id="@+id/logout"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:text="下线" 
                 android:layout_weight="1"
-                android:visibility="invisible"/>
+                android:visibility="invisible"
+                android:background="@drawable/logout_selector"
+                />
 
-            <Button
+            <ImageView
                 android:id="@+id/report"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:text="生成报告" 
                 android:layout_weight="1"
-                android:visibility="invisible"/>
+                android:visibility="invisible"
+                android:background="@drawable/report_selector"/>
 
         </TableRow>
         
