--- a/res/layout/login1.xml
+++ b/res/layout/login1.xml
@@ -120,8 +120,10 @@
                                 <EditText 
                                    android:id="@+id/password"
                                    android:layout_height="match_parent" 
-                                                              android:layout_width="0dp" 
-                           android:layout_weight="1"/>
+                                   android:layout_width="0dp" 
+                                   android:layout_weight="1"
+                                   android:inputType="textPassword"
+                                   />"
         
 
             
@@ -254,7 +256,7 @@
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center"
-                     android:text="TextView"
+                     android:inputType="textPassword"
                      android:textColor="@color/white" />
             
     </TableRow>       
@@ -330,7 +332,7 @@
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center"
-                     android:text="TextView"
+                     android:inputType="textPassword"
                      android:textColor="@color/white" />
             
     </TableRow>       
@@ -407,7 +409,7 @@
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center"
-                     android:text="TextView" 
+                     android:inputType="textPassword"
                      android:textColor="@color/white"/>
             
     </TableRow>       
